@@ -1,3 +1,4 @@
+-   Added xelerus function lookup
 -   Added fact list command
 -   Added ping command
 -   Add details command to facts. Shows details about a fact
